Merge AM 3.19.0 into master
fixes AM-81